# nih-plug

nih_plug_vizia/: Cargo.toml
nih_plug_vizia/src/: editor.rs  vizia_assets.rs  widgets.rs
nih_plug_vizia/src/widgets/: param_slider.rs  peak_meter.rs  resize_handle.rs
plugins/diopser/src/editor/: slider.rs  xy_pad.rs
src/: editor.rs
src/wrapper/clap/: wrapper.rs
src/wrapper/standalone/: config.rs
src/wrapper/standalone/backend/: cpal.rs
src/wrapper/vst3/: view.rs
