[package]
name = "nih_plug_vizia"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use VIZIA GUIs with NIH-plug"

[dependencies]
nih_plug = { path = "..", default-features = false }
nih_plug_assets = { git = "https://github.com/robbert-vdh/nih_plug_assets.git" }

# Using latest vizia 0.3.0 with its built-in baseview integration
# The baseview dependency must match what vizia uses internally
baseview = { git = "https://github.com/vizia/baseview.git", rev = "bd7774294ebd6a4ea497e9c02655a4abd0408137" }
vizia = { git = "https://github.com/vizia/vizia.git", rev = "ace6b3a707f8f369d52398e40c89108c61d866af", default-features = false, features = ["baseview", "clipboard", "x11"] }

crossbeam = "0.8"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
